0.8.1: BETA
     - Web interface:
           - added auto refresh feature

0.8.0: 2011/25/08
     - replaced OSSP::uuid with UUID::Tiny
     - migrated backend code into modules (FS, AFS, GFS backend modules)
     - added SMB/CIFS backend module for access ADS integrated Windows/Samba shares
     - added example DBB backend module (database backend)
     - fixed AFS performance bugs 
     - fixed security bug (accessing files outside $DOCUMENT_ROOT)
     - fixed MIME types related performace bug 
     - fixed CalDAV bug related to Sundbird reported by Andrius Preimantas
     - fixed move to trash bug reported by Andrius Preimantas
     - Web interface:
           - improved display of byte sizes (flexible unit change) (GET)
	   - added symbolic link support (POST)
	   - added view filter (GET)
	   - added list options (GET)
	   - added quota limit exceeded highlighting (GET)
	   - added extension support (GET)
	   - added view support (GET)
	   - fixed long navigation path bug (GET)
	   - added custom error doc support (GET/POST)
     - improved performance with the NYT profiler
     - fixed symlink move bug
     - fixed minor webdav.conf returns wrong result code bug (thanx Andrius Preimantas andrius.preimantas@gmail.com) 

0.7.0: 2011/29/04
     - fixed major search bug (SEARCH; thx jfotop@ath.forthnet.gr)
     - added folder redirect feature for disabled file/folder management requested by Laurent Bardi <Laurent.Bardi@ipbs.fr>
     - added (incomplete) french translatations for the Web interface (thanx Laurent Bardi <Laurent.Bardi@ipbs.fr>)
     - added sysinfo feature (GET)
     - added gzip, deflate encoding support (GET)
     - Web interface:
         - fixed mkdir/rename security bug (POST)
         - added UNSELECTABLE_FOLDERS feature (GET)
         - fixed move/rename behavior for folders (POST)
         - added gzip content encoding support (GET)
         - added variable substitution for $HEADER, $LANGSWITCH, $SIGNATURE (GET)